// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChopLogicLabel > should render correctly as not required label 1`] = `
<DocumentFragment>
  <label
    class="sc-egkSDF nXWIS"
    for="test-input-id"
  >
    <span>
      Test label
    </span>
  </label>
</DocumentFragment>
`;

exports[`ChopLogicLabel > should render correctly as required label 1`] = `
<DocumentFragment>
  <label
    class="sc-egkSDF nXWIS"
    for="test-input-id"
  >
    <span>
      Test label
      <abbr
        title="required"
      >
        *
      </abbr>
    </span>
  </label>
</DocumentFragment>
`;

exports[`ChopLogicLabel > should render correctly without text 1`] = `
<DocumentFragment>
  <label
    class="sc-egkSDF nXWIS"
    for="test-input-id"
  />
</DocumentFragment>
`;

exports[`ChopLogicLabel > should render left icon 1`] = `
<DocumentFragment>
  <label
    class="sc-egkSDF nXWIS"
    for="test-input-id"
  >
    <span
      aria-label="SVG Icon Fallback"
      style="font-size: 1rem;"
    >
      ⬜
    </span>
    <span>
      Test label
    </span>
  </label>
</DocumentFragment>
`;

exports[`ChopLogicLabel > should render right icon 1`] = `
<DocumentFragment>
  <label
    class="sc-egkSDF nXWIS"
    for="test-input-id"
  >
    <span
      aria-label="SVG Icon Fallback"
      style="font-size: 1rem;"
    >
      ⬜
    </span>
    <span>
      Test label
    </span>
  </label>
</DocumentFragment>
`;
